Fixed <pre> overflow issue with latest normalize version.

--- a/css/darkdoc.css
+++ b/css/darkdoc.css
@@ -108,6 +108,7 @@ h1,h2,h3,h4,h5,h6 {
     border: 1px solid #181A1F;
     border-radius: 4px;
     padding: 32px;
+    overflow: auto;
 }
 
 .li-article code {
